Mobile screen done

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -3,23 +3,23 @@ header {
 
     section.form {
         box-shadow: 0 0 0 12px #ffffff;
-    
+
         @media screen and (max-width: 540px) {
             box-shadow: 0 0 0 8px #ffffff;
         }
-    
+
         form {
             label {
                 font-family: 'Raleway', sans-serif;
                 color: #ffffff;
                 text-transform: capitalize;
                 font-weight: 600;
-    
+
                 @media screen and (max-width: 540px) {
-                    display: none;
+                    font-size: 13px;
                 }
             }
-    
+
             .form-control {
                 margin-top: 8px;
                 width: 100%;
@@ -32,7 +32,7 @@ header {
                 font-size: 18px;
                 box-shadow: none;
                 outline: none;
-    
+
                 @media screen and (max-width: 540px) {
                     height: 47px;
                     margin-top: 0;
