Landing page ready

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,10 @@
 // @import "node_modules/slick-carousel/slick/slick.scss";
 // @import "node_modules/slick-carousel/slick/slick-theme.scss";
 
+@import 'node_modules/aos/src/sass/core';
+@import 'node_modules/aos/src/sass/easing';
+@import 'node_modules/aos/src/sass/animations';
+
 @import "fonts.scss";
 @import "base.scss";
 @import "style.scss";
